update: linux 11.md

--- a/git-github-linux/contents/11.md
+++ b/git-github-linux/contents/11.md
@@ -21,6 +21,6 @@
 
 - 查看文件格式命令：`file`
     * $`file test.zip` 查看文件格式
-    * 可通过此命令查看该压缩文件是什么格式, 然后调用不同的方式来解压
+    * 如文件没有后缀名，可通过此命令查看该压缩文件是什么格式, 然后调用不同的方式来解压
 
 - 注意：windows下打包的zip推荐使用`WinRAR`来处理，`HaoZip`处理不标准，可能在linux下文件无法正常解压！
