update: linux 12.md

--- a/git-github-linux/contents/12.md
+++ b/git-github-linux/contents/12.md
@@ -14,7 +14,7 @@
 ### vi/vim常用操作功能
 
 - 这些操作都要在命令模式下
-- 移动光标：键盘的上下左右箭头 或者 KJHL 键，注：HL分别代表左右，KJ代表上下
+- 移动光标：键盘的上下左右箭头 或者 `KJHL` 键，注：`HL`分别代表左右，`KJ`代表上下
 - 快速定位：
     * `:set nu` 显示行号
     * `:15` 跳到第15行
