--- a/git-github-linux/contents/13.md
+++ b/git-github-linux/contents/13.md
@@ -89,157 +89,157 @@
 
 - 在root权限下操作
 
-```shell
-# 创建两个组
-groupadd pyhton
-groupadd php
+    ```shell
+    # 创建两个组
+    groupadd pyhton
+    groupadd php
 
-# 分别在两个组下创建两个用户
-useradd -m -g python jack
-useradd -m -g python mary
+    # 分别在两个组下创建两个用户
+    useradd -m -g python jack
+    useradd -m -g python mary
 
-useradd -m -g php lily
-useradd -m -g php tom
+    useradd -m -g php lily
+    useradd -m -g php tom
 
-ls /home/ # 查看用户目录
-jack joe lily mary tom # 此处是输出信息
+    ls /home/ # 查看用户目录
+    jack joe lily mary tom # 此处是输出信息
 
-# 创建目录 不能一次创建多层目录，如果需要，要加参数 -p
-mkdir /data/python -p
-mkdir /data/php
+    # 创建目录 不能一次创建多层目录，如果需要，要加参数 -p
+    mkdir /data/python -p
+    mkdir /data/php
 
-cd /data
-ls
-php python # 此处是输出信息
+    cd /data
+    ls
+    php python # 此处是输出信息
 
-# 处理jack用户
-passwd jack # 给jack用户设置密码
-Enter new UNIX password:
-Retype new UNIX password:
-passwd: password updated successfully
+    # 处理jack用户
+    passwd jack # 给jack用户设置密码
+    Enter new UNIX password:
+    Retype new UNIX password:
+    passwd: password updated successfully
 
-```
+    ```
 
 - 登录jack用户
 
-```shell
-# 查看当前目录
-pwd
-/home/jack # 此处是输出信息
+    ```shell
+    # 查看当前目录
+    pwd
+    /home/jack # 此处是输出信息
 
-# 切换到data目录
-cd /data
-ls -l
-total 8 # 此处是输出信息
-drwxr-xr-x 2 root root 4098 Dec 15 22:00 php # 此处是输出信息
-drwxr-xr-x 2 root root 4098 Dec 15 22:00 python # 此处是输出信息
+    # 切换到data目录
+    cd /data
+    ls -l
+    total 8 # 此处是输出信息
+    drwxr-xr-x 2 root root 4098 Dec 15 22:00 php # 此处是输出信息
+    drwxr-xr-x 2 root root 4098 Dec 15 22:00 python # 此处是输出信息
 
-# 目前jack属于other群组，在other群组中的权限是 r-x 可读、可执行
-cd python # 因为可执行所以可切换
-touch x.py # 尝试创建文件
-touch: cannot touch 'x.py': Permission denied # 此处是输出信息 可见提示无法创建，缺少权限(-w 写权限)
+    # 目前jack属于other群组，在other群组中的权限是 r-x 可读、可执行
+    cd python # 因为可执行所以可切换
+    touch x.py # 尝试创建文件
+    touch: cannot touch 'x.py': Permission denied # 此处是输出信息 可见提示无法创建，缺少权限(-w 写权限)
 
-```
+    ```
 
 - 目前jack无法再python目录中写操作，我们切换到root权限下，将python目录转让给jack
 
-```shell
-# 在/data目录下
-chown jack python/
-ls -l
-total 8 # 此处是输出信息
-drwxr-xr-x 2 root root 4096 Dec 15 22:00 php # 此处是输出信息
-drwxr-xr-x 2 jack root 4096 Dec 15 22:00 python # 此处是输出信息
+    ```shell
+    # 在/data目录下
+    chown jack python/
+    ls -l
+    total 8 # 此处是输出信息
+    drwxr-xr-x 2 root root 4096 Dec 15 22:00 php # 此处是输出信息
+    drwxr-xr-x 2 jack root 4096 Dec 15 22:00 python # 此处是输出信息
 
-```
+    ```
 
 - 验证权限是否配置成功，切换到jack用户下
 
-```shell
-touch x.py
-# 发现这时候已经可以正常创建了
-```
+    ```shell
+    touch x.py
+    # 发现这时候已经可以正常创建了
+    ```
 
 - 同理测试mary用户，在root用户下，给mary设置密码
 
-```shell
-passwd mary # 给mary用户设置密码
-Enter new UNIX password:
-Retype new UNIX password:
-passwd: password updated successfully
-```
+    ```shell
+    passwd mary # 给mary用户设置密码
+    Enter new UNIX password:
+    Retype new UNIX password:
+    passwd: password updated successfully
+    ```
 
 - 再登录mary用户，发现和之前jack一样无法在python目录下创建文件
 
-```shell
-# 此时同理mary在刚刚登录时候，在/data/python目录上也是没有写权限的
-# 但是我们不能再像给jack权限一样，把目录转让给mary，这样jack会失去权限
-# 我们可以考虑将写权限归到小组中去，将mary加入到相应的组中去即可
-```
+    ```shell
+    # 此时同理mary在刚刚登录时候，在/data/python目录上也是没有写权限的
+    # 但是我们不能再像给jack权限一样，把目录转让给mary，这样jack会失去权限
+    # 我们可以考虑将写权限归到小组中去，将mary加入到相应的组中去即可
+    ```
 
 - 切换到root用户，处理mary的相关权限
 
-```shell
-# 在/data目录下操作 将python目录加入到python组中
-chgrp python python/
-ls -l
-total 8 # 此处是输出信息
-drwxr-xr-x 2 root root   4096 Dec 15 22:00 php # 此处是输出信息
-drwxr-xr-x 2 jack python 4096 Dec 15 22:00 python # 此处是输出信息 发现python组是r-x，依然没有写权限
+    ```shell
+    # 在/data目录下操作 将python目录加入到python组中
+    chgrp python python/
+    ls -l
+    total 8 # 此处是输出信息
+    drwxr-xr-x 2 root root   4096 Dec 15 22:00 php # 此处是输出信息
+    drwxr-xr-x 2 jack python 4096 Dec 15 22:00 python # 此处是输出信息 发现python组是r-x，依然没有写权限
 
-# 给所属组加上可写的权限即可
-chmod g+w python/ # 这个命令表示 将python目录给所属组加上写权限； g代表所属组(u代表所有者, o代表其他) + 代表加权限 (- 代表减权限)
+    # 给所属组加上可写的权限即可
+    chmod g+w python/ # 这个命令表示 将python目录给所属组加上写权限； g代表所属组(u代表所有者, o代表其他) + 代表加权限 (- 代表减权限)
 
-# 再次查看权限
-ls -l
-total 8 # 此处是输出信息
-drwxr-xr-x 2 root root   4096 Dec 15 22:00 php # 此处是输出信息
-drwxrwxr-x 2 jack python 4096 Dec 15 22:00 python # 此处是输出信息 发现所属组新增了写权限：rwx
+    # 再次查看权限
+    ls -l
+    total 8 # 此处是输出信息
+    drwxr-xr-x 2 root root   4096 Dec 15 22:00 php # 此处是输出信息
+    drwxrwxr-x 2 jack python 4096 Dec 15 22:00 python # 此处是输出信息 发现所属组新增了写权限：rwx
 
-```
+    ```
 
 - 由于在创建mary用户时分配到了python组，切换到mary用户，这时候发现mary便可以进行写权限了
 
-```shell
-# 在python目录下
-touch y.py # 此时可以正确创建
+    ```shell
+    # 在python目录下
+    touch y.py # 此时可以正确创建
 
-# 再次查看
-ls -l
-total 0
--rw-r--r-- 1 jack python 0 Dec 15 22:03 x.py
--rw-r--r-- 1 mary python 0 Dec 15 22:06 y.py
+    # 再次查看
+    ls -l
+    total 0
+    -rw-r--r-- 1 jack python 0 Dec 15 22:03 x.py
+    -rw-r--r-- 1 mary python 0 Dec 15 22:06 y.py
 
-# mary想要操作jack创建的x.py文件 此时同样是 Permission denied
+    # mary想要操作jack创建的x.py文件 此时同样是 Permission denied
 
-```
+    ```
 
 - 切换到root用户，我们可将x.py文件对组内可写
 
-```shell
-# 在python目录下
-chmod g+x x.py # 此时将x.py文件在组内可写
-```
+    ```shell
+    # 在python目录下
+    chmod g+x x.py # 此时将x.py文件在组内可写
+    ```
 
 - 再次切换到mary用户，发现x.py在组内可写了, 此处不再赘述，任务完成 job done！
 
 ### 更简便的进行权限操作示例
 
-再次切换到root用户下
+- 再次切换到root用户下，使用root权限
 
-```shell
-# 在python目录下
-chmod 777 x.py
-ls -l
-total 4 # 此处是输出信息
--rwxrwxrwx 1 jack python 30 Dec 15 22:03 x.py # 此处是输出信息 发现 x.py文件在所有组下拥有了全部权限
--rw-r--r-- 1 mary python  0 Dec 15 22:06 y.py # 此处是输出信息
+    ```shell
+    # 在python目录下
+    chmod 777 x.py
+    ls -l
+    total 4 # 此处是输出信息
+    -rwxrwxrwx 1 jack python 30 Dec 15 22:03 x.py # 此处是输出信息 发现 x.py文件在所有组下拥有了全部权限
+    -rw-r--r-- 1 mary python  0 Dec 15 22:06 y.py # 此处是输出信息
 
-# 再次修改权限, 只给拥有者全部权限，群组和其他无权限
-chmod 700 x.py
-ls -l
-total 4 # 此处是输出信息
--rwx------ 1 jack python 30 Dec 15 22:03 x.py # 此处是输出信息 发现只有所有者拥有全部权限，群组和其他都没有权限了
--rw-r--r-- 1 mary python  0 Dec 15 22:06 y.py # 此处是输出信息
+    # 再次修改权限, 只给拥有者全部权限，群组和其他无权限
+    chmod 700 x.py
+    ls -l
+    total 4 # 此处是输出信息
+    -rwx------ 1 jack python 30 Dec 15 22:03 x.py # 此处是输出信息 发现只有所有者拥有全部权限，群组和其他都没有权限了
+    -rw-r--r-- 1 mary python  0 Dec 15 22:06 y.py # 此处是输出信息
 
-```
+    ```
