update: linux 13.md

--- a/git-github-linux/contents/13.md
+++ b/git-github-linux/contents/13.md
@@ -60,10 +60,11 @@
 
 - `chmod u+x ./go.sh`
     * `chmod` 表示 change mod 改变权限
-    * 整条命令表示：修改当前目录下的go.sh文件的权限为 u+x
+    * 整条命令表示：修改当前目录下的go.sh文件的拥有者权限添加可执行
 
 - `chmod -R 777 /data/www`
-    * ...
+    * `-R` 是目录下所有文件，`777`就是高权限（读、写、执行）
+    * 整条命令表示：将/data/www目录下的所有文件权限修改成可读可写可执行
 
 ### 通过实例来进行权限操作
 
@@ -221,7 +222,9 @@
     chmod g+x x.py # 此时将x.py文件在组内可写
     ```
 
-- 再次切换到mary用户，发现x.py在组内可写了, 此处不再赘述，任务完成 job done！
+- 再次切换到mary用户，发现x.py在组内可写了, 此处不再赘述。
+
+- 同理，按同样的方式将lily、tom添加进php组中即可，任务完成 job done！
 
 ### 更简便的进行权限操作示例
 
