update: linux 14.md

--- a/git-github-linux/contents/14.md
+++ b/git-github-linux/contents/14.md
@@ -153,7 +153,7 @@
     * $`kill 2812`
     * 强制结束进程加参数 -9 $`kill -9 2812`
     * 其他方式：pkill 进程名 $`pkill httpd` 结束apache的这个进程
-    * 结束前台终端进程：Ctrl(Command) + C
+    * 结束前台终端进程：`Ctrl(Command) + C`
 
 ### 查看硬盘空间
 
