update: linux 19.md

--- a/git-github-linux/contents/19.md
+++ b/git-github-linux/contents/19.md
@@ -57,8 +57,6 @@
 
 <img width=600 src="./screenshot/13.png">
 
-简单做下说明
-
 - 在第一层是项目入口
     * 包括PC、移动端的请求
     * 所有的请求被接入到了入口层
@@ -84,4 +82,4 @@
 
 - 第五层是存储层
     * 主要是一些常用的关系型数据库如: mysql等
-    * 还有一些KV类型的存储系统如: radis、mongodb
+    * 还有一些KV类型的存储系统如: redis、mongodb
