update: linux 20.md

--- a/git-github-linux/contents/20.md
+++ b/git-github-linux/contents/20.md
@@ -7,14 +7,14 @@
 - 例如：中国无法访问google.com, 我们通过代理服务器访问google，之后代理服务器把结果返回给你
 - 再比如：路人甲缺钱想找马云先生借钱,路人甲无法联系马云但与刘老师比较熟,而刘老师和马云比较熟, 路人甲委托刘老师在马云那里借到了钱(马云并不知道钱是路人甲借的)
 
-<img width="500" src="./screenshot/14.webp">
+<img width="400" src="./screenshot/14.webp">
 
 
 2 ） **反向代理(Reverse Proxy)**
 - 例如：拨打中国电信客服电话10000，每一次为你服务的客服都可能不是一个人, 我们并不关心他们内部如何运作, 那么中国电信10000对于你来说就是反向代理了
-- 例如：我们访问百度，其实百度是由多台服务器构成的，我们并不知道是那一台服务器响应我们的，www.baidu.com域名对应的服务器对于我们电脑来说就是反向代理
+- 例如：我们访问百度，其实百度是由多台服务器构成的，我们并不知道是那一台服务器响应我们的，`www.baidu.com` 域名对应的服务器对于我们电脑来说就是反向代理
 
-<img width="500" src="./screenshot/15.webp">
+<img width="400" src="./screenshot/15.webp">
 
 3 ） **两者区别**
 
