update: linux 20.md

--- a/git-github-linux/contents/20.md
+++ b/git-github-linux/contents/20.md
@@ -8,7 +8,7 @@
 - 例如：中国无法访问google.com, 我们通过代理服务器访问google，之后代理服务器把结果返回给你
 - 再比如：路人甲缺钱想找马老师借钱,路人甲无法联系马老师但与刘老师比较熟,而刘老师和马老师比较熟, 路人甲委托刘老师在马老师那里借到了钱(马老师并不知道钱是路人甲借的)
 
-<div style="align: center">
+<div align=center>
     <img width="400" src="./screenshot/14.png">
 </div>
 
@@ -18,7 +18,7 @@
 - 例如：我们访问百度，其实百度是由多台服务器构成的，我们并不知道是哪一台服务器响应我们的，`www.baidu.com` 域名对应的服务器对于我们电脑来说就是反向代理
 - 怎样让后端的服务器均衡的提供服务，才能充分利用资源, 这就是我们说的负载均衡技术
 
-<div style="align: center">
+<div align=center>
     <img width="400" src="./screenshot/15.png">
 </div>
 
