update: linux 19.md

--- a/git-github-linux/contents/19.md
+++ b/git-github-linux/contents/19.md
@@ -55,7 +55,9 @@
 
 ### 经典的架构设计
 
-<img width=600 src="./screenshot/13.png">
+<div align=center>
+    <img width=600 src="./screenshot/13.png">
+</div>
 
 - 在第一层是项目入口
     * 包括PC、移动端的请求
