--- a/git-github-linux/contents/20.md
+++ b/git-github-linux/contents/20.md
@@ -3,24 +3,26 @@
 所谓代理就是让别人帮你办事，将结果反馈给你。
 
 1） **正向代理(Proxy)**
-- 是一个位于客户端和原始服务器(origin server)之间的服务器，为了从原始服务器取得内容，客户端向代理发送一个请求并指定目标(原始服务器)，然后代理向原始服务器转交请求并将获得的内容返回给客户端。
-- 例如：你无法去国外，让能出国的朋友去国外购买商品后再转交给你。
-- 例如：中国无法访问google.com, 我们通过代理服务器访问google，之后代理服务器把结果返回给你
-- 再比如：路人甲缺钱想找马老师借钱,路人甲无法联系马老师但与刘老师比较熟,而刘老师和马老师比较熟, 路人甲委托刘老师在马老师那里借到了钱(马老师并不知道钱是路人甲借的)
 
 <div align=center>
     <img width="400" src="./screenshot/14.png">
 </div>
 
+- 是一个位于客户端和原始服务器(origin server)之间的服务器，为了从原始服务器取得内容，客户端向代理发送一个请求并指定目标(原始服务器)，然后代理向原始服务器转交请求并将获得的内容返回给客户端。
+- 例如：你无法去国外，让能出国的朋友去国外购买商品后再转交给你。
+- 例如：中国无法访问google.com, 我们通过代理服务器访问google，之后代理服务器把结果返回给你
+- 再比如：路人甲缺钱想找马老师借钱,路人甲无法联系马老师但与刘老师比较熟,而刘老师和马老师比较熟, 路人甲委托刘老师在马老师那里借到了钱(马老师并不知道钱是路人甲借的)
+
 2 ） **反向代理(Reverse Proxy)**
-- 服务器位于用户与目标服务器之间，但是对于用户而言，反向代理服务器就相当于目标服务器，即用户直接访问反向代理服务器就可以获得目标服务器的资源。同时，用户不需要知道目标服务器的地址，也无须在用户端作任何设定。反向代理服务器通常可用来作为Web加速，即使用反向代理作为Web服务器的前置机来降低网络和服务器的负载，提高访问效率。
-- 例如：拨打中国电信客服电话10000，每一次为你服务的客服都可能不是一个人, 我们并不关心他们内部如何运作, 那么中国电信10000对于你来说就是反向代理了
-- 例如：我们访问百度，其实百度是由多台服务器构成的，我们并不知道是哪一台服务器响应我们的，`www.baidu.com` 域名对应的服务器对于我们电脑来说就是反向代理
-- 怎样让后端的服务器均衡的提供服务，才能充分利用资源, 这就是我们说的负载均衡技术
 
 <div align=center>
     <img width="400" src="./screenshot/15.png">
 </div>
+
+- 服务器位于用户与目标服务器之间，但是对于用户而言，反向代理服务器就相当于目标服务器，即用户直接访问反向代理服务器就可以获得目标服务器的资源。同时，用户不需要知道目标服务器的地址，也无须在用户端作任何设定。反向代理服务器通常可用来作为Web加速，即使用反向代理作为Web服务器的前置机来降低网络和服务器的负载，提高访问效率。
+- 例如：拨打中国电信客服电话10000，每一次为你服务的客服都可能不是一个人, 我们并不关心他们内部如何运作, 那么中国电信10000对于你来说就是反向代理了。
+- 例如：我们访问百度，其实百度是由多台服务器构成的，我们并不知道是哪一台服务器响应我们的，`www.baidu.com` 域名对应的服务器对于我们电脑来说就是反向代理。
+- 怎样让后端的服务器均衡的提供服务，才能充分利用资源, 这就是我们说的负载均衡技术。
 
 3 ） **两者区别**
 
