update: linux 21.md

--- a/git-github-linux/contents/21.md
+++ b/git-github-linux/contents/21.md
@@ -1,7 +1,4 @@
-Nginx 反向代理
----
-
-### 做反向代理的目的
+### 反向代理的目的
 
 - 主动断开用户和真实服务器之间直接通信，只有通过我们的代理服务器才能访问我们的服务
 
@@ -55,4 +52,5 @@ Nginx 反向代理
     * 然后访问66服务器, 频繁刷新, 就可以看到一会儿是67内容, 一会儿是68内容
     * 此时负载均衡已配置完毕，nginx已经将请求在两台服务器之间来回切换
 
-- 备注：以上是最好的配置方案，也很简单。当然还有一些其他方案如：`ip_hash`, 但是并不是太理想, 有时间可以多了解一下。
+- 备注：以上是最好的配置方案，通过权重来随机分配机器来实现，也很简单。
+    * 当然还有一些其他方案如：`ip_hash`, 但是并不是太理想, 有时间可以多了解一下。
