update: linux 21.md

--- a/git-github-linux/contents/21.md
+++ b/git-github-linux/contents/21.md
@@ -40,7 +40,7 @@
         index         index.html index.htm;
         server_name   _;
         location / {
-            proxy_pass http://backend; # 在这里直接指定为 backend 即可
+            proxy_pass http://backend; # 在这里将代理服务器指定为backend
         }
     }
     ```
