update: linux 25.md

--- a/git-github-linux/contents/25.md
+++ b/git-github-linux/contents/25.md
@@ -155,7 +155,7 @@
 - 由此手机上接收到了模板消息的推送
 
 - 测试完成后将代码进行服务器部署
-    * windows下：下载pscp命令(putty提供的命令) 比如下载到了`c:\Tools\pscp.exe`, 拷贝命令：$`c:\Tools\pscp.exe monitor.py root@192.168.55.66:/root` 输入密码即可
+    * windows下：下载pscp命令(putty提供的命令) 比如下载到了`c:\pscp.exe`, 拷贝命令：$`c:\pscp.exe monitor.py root@192.168.55.66:/root` 输入密码即可
     * linux下：使用ssh命令即可
 
 - 部署完成就可以执行该程序了:$`python3 monitor.py` 进行时时监控
