update: linux 25.md

--- a/git-github-linux/contents/25.md
+++ b/git-github-linux/contents/25.md
@@ -42,7 +42,6 @@
         Monitor.mem(85) # 监控内存
         Monitor.cpu(85) # 监控cpu # 最近三次的值超过才报警
         time.sleep(3)
-
     ```
 
 - 部署到服务器上并运行，即可时时监控系统CPU、内存状态，其他指标也可以同样处理
@@ -140,7 +139,7 @@
 
         client.message.sent_template(openid, template_id, data)
 
-    # 开始测试
+    # 开始测试 执行该文件，由此手机上接收到了模板消息的推送
     # Monitor.wechat('CPU超过90%') # 这里的内容是content的内容，可以按上面发送邮件的方式处理, 此处做举例
 
     # 下面开始编辑send_msg方法，将发邮件方法加入其中
@@ -149,14 +148,12 @@
         # print(content)
         cls.mail(content) # 调用发邮件功能
         cls.wechat(content) # 调用发微信消息模板功能
-
     ```
 
-- 由此手机上接收到了模板消息的推送
-
-- 测试完成后将代码进行服务器部署
+- 测试完成后补充上述`send_msg`代码将微信功能加入, 然后将代码进行服务器部署
     * windows下：下载pscp命令(putty提供的命令) 比如下载到了`c:\pscp.exe`, 拷贝命令：$`c:\pscp.exe monitor.py root@192.168.55.66:/root` 输入密码即可
-    * linux下：使用ssh命令即可
+    * linux下：使用scp命令即可，此处不再赘述
+    * Mac下：同linux
 
 - 部署完成就可以执行该程序了:$`python3 monitor.py` 进行时时监控
 
