update: linux 25.md

--- a/git-github-linux/contents/25.md
+++ b/git-github-linux/contents/25.md
@@ -113,7 +113,7 @@
 - 然后我们可以关注测试号的二维码, 关注成功后刷新该页面，发现在旁边的用户列表中出现了自己的微信号
 - 在python中有个wechatpy的模块专门处理微信平台的开发 $ `pip3 install wechatpy`
 - 同时需要安装一下加密的库：$`pip3 install cryptography` 或者 $`pip3 install PyCrypto` 
-- 备注：install的时候当然可以写在一起，这里为了区分方便和写作清晰，那个加密库可用就安装哪个即可
+- 备注：install的时候当然可以写在一起，这里为了区分方便和写作清晰，哪个加密库可用就安装哪个即可
 - 紧接着我们开始继续编辑monitor.py文件, 补充和编辑以下代码, 进行发送微信模板消息的代码处理
     ```python
     @classmethod
