update: linux 17.md

--- a/git-github-linux/contents/17.md
+++ b/git-github-linux/contents/17.md
@@ -53,12 +53,12 @@ urlpatterns = [
 
 - uWSGI 是c语言写的专业的web服务器，性能强悍
 - 安装uWSGI, $`pip3 install uwsgi`
-- 启动调试uWSGI, $`uwsgi --http :9090 --chdir /rootdemo --module demo.wsgi`
+- 启动调试uWSGI, $`uwsgi --http :9090 --chdir /root/demo --module demo.wsgi`
     * 这种方式用于调试
     * `--http`: 表示 表示要开启一个http的服务, 指定的访问地址(端口), 默认没有ip表示本服务器
     * `--chdir`: 表示 指定项目的目录
     * `--module`: 表示 指定运行的模块
-- 后台运行服务并开启日志的方法： $`uwsgi --http :9090 --chdir /rootdemo --module demo.wsgi --daemonize /var/log/uwsgi.log`
+- 后台运行服务并开启日志的方法： $`uwsgi --http :9090 --chdir /root/demo --module demo.wsgi --daemonize /var/log/uwsgi.log`
     * `--daemonize`: 表示以服务的方式运行，不会占用终端, 并设置日志文件
     * 这是部署项目最终运行的方式
 - 如果需要结束该进程，那么：$`ps -ef | grep uwsgi` 查找到该进程的父进程ID, 即：PPID
@@ -66,8 +66,26 @@ urlpatterns = [
 - 将运行命令写到开机脚本中：
     * 为了避免每次开机都要手动启动该服务
     * $`vi /etc/rc.local`
-    - 将`uwsgi --http :9090 --chdir /rootdemo --module demo.wsgi --daemonize /var/log/uwsgi.log`命令复制粘贴到最后(`exit 0`的上面)
+    - 将`uwsgi --http :9090 --chdir /root/demo --module demo.wsgi --daemonize /var/log/uwsgi.log`命令复制粘贴到最后(`exit 0`的上面)
 - 优化开机脚本：
     * 查看uwsgi的完整路径: $`which uwsgi` 输出一般默认是：`/usr/local/bin/uwsgi`
-    * 优化脚本：`/usr/local/bin/uwsgi --http :9090 --chdir /rootdemo --module demo.wsgi --daemonize /var/log/uwsgi.log`
+    * 优化脚本：`/usr/local/bin/uwsgi --http :9090 --chdir /root/demo --module demo.wsgi --daemonize /var/log/uwsgi.log`
     * 推荐写完整路径
+
+### 开机脚本的配置管理
+
+- 上述对uwsgi服务的开机配置并不太友好, 参数较多的时候会很麻烦, 考虑到后期可能会有很多服务, 为了后期管理方便，建议将每项服务的参数配置到一个独立的文件中
+- 以uwsgi为例：
+    * 为uwsgi创建配置文件, $`vi /data/uwsgi.ini`
+        ```python
+        [uwsgi]
+        http= :9090 
+        chdir= /root/demo
+        module= demo.wsgi 
+        daemonize= /var/log/uwsgi.log
+        ```
+    * 重写关于uwsgi的开机脚本：$`vi /etc/rc.local`
+        * 修改为: `/usr/local/bin/uwsgi --ini /data/uwsgi.ini`
+    * 如果需要重启uwsgi:
+        * 结束服务：$`pkill uwsgi`
+        * 重启服务：$`uwsgi --ini /data/uwsgi.ini`
