update: linux 17.md

--- a/git-github-linux/contents/17.md
+++ b/git-github-linux/contents/17.md
@@ -28,7 +28,6 @@ from django.http import HttpResponse # 导入response
 urlpatterns = [
     path('', lambda request: HttpResponse("Hello World")),
 ]
-
 ```
 
 3 ) **测试运行程序**
@@ -79,10 +78,10 @@ urlpatterns = [
     * 为uwsgi创建配置文件, $`vi /data/uwsgi.ini`
         ```python
         [uwsgi]
-        http= :9090 
-        chdir= /root/demo
-        module= demo.wsgi 
-        daemonize= /var/log/uwsgi.log
+        http=:9090 
+        chdir=/root/demo
+        module=demo.wsgi 
+        daemonize=/var/log/uwsgi.log
         ```
     * 重写关于uwsgi的开机脚本：$`vi /etc/rc.local`
         * 修改为: `/usr/local/bin/uwsgi --ini /data/uwsgi.ini`
