update: python 43.md

--- a/python/contents/43.md
+++ b/python/contents/43.md
@@ -1,9 +1,41 @@
-### Django
+### 框架
+
+1 ) **什么是框架?**
+
+- 软件框架就是为实现或完成某种软件开发时,提供了一些基础的软件产品
+- 框架的功能类似于基础设施,提供并实现最为基础的软件架构和体系
+- 通常情况下我们依据框架来实现更为复杂的业务程序开发
+- 框架就是程序的骨架
+
+2 ) **框架的特点**
+
+- 可重用
+- 成熟,稳健
+- 易扩展、易维护
+
+### Django框架
+
 - 是一个高级的Python Web框架，它鼓励快速开发和清洁，务实的设计
 - 让开发者专注于程序业务，而无需重复造轮子
 - 更好的构建web应用程序并减少代码
 - 免费开源
 - [官网](https://www.djangoproject.com/)
+
+### Django框架的特点
+
+- 快速开发：Django的宗旨在于帮助开发人员快速从概念到完成应用程序。
+- 安全可靠：Django认真对待安全性，帮助开发人员避免许多常见的安全错误。
+- 超可伸缩性：Web上的一些最繁忙的网站利用了Django快速灵活扩展的能力。
+
+### Django可以使用什么Python版本？
+
+<table>
+  <tr><th>Django版本</th><th>Python版本</th></tr>
+  <tr><td>1.8</td><td>2.7，3.2（直到2016年底），3.3, 3.4, 3.5</td></tr>
+  <tr><td>1.9, 1.10</td><td>2.7, 3.4, 3.5</td></tr>
+  <tr><td>1.11</td><td>2.7 , 3.4 , 3.5 , 3.6</td></tr>
+  <tr><td>2.0</td><td>3.5+</td></tr>
+</table>
 
 ### 安装
 - $`pip install Django==2.1.7` 注：直接用 pip install Django 会安装最新版, 这里使用的是制定版本
@@ -25,13 +57,26 @@
 
 ### Python中常见的框架
 
-- Django
-- web.py
-- Torado
-- Flask
-- Bottle
+- Django: 被官方称之为完美主义者的Web框架
+- web.py: 力求精简
+- Torado: 力求精简
+- Flask: 新生代微框架
+- Bottle: 新生代微框架
 
 ### Web框架中的一些概念
 
 - [MVC](https://blog.csdn.net/zuiyingong6567/article/details/80150834)
+  * 大部分开发语言中都有MVC框架
+  * MVC框架的核心思想是：解耦
+  * 降低各功能模块之间的耦合性，方便变更，更容易重构代码，最大程度上实现代码的重用
+  * m表示model，主要用于对数据库层的封装
+  * v表示view，用于向用户展示结果
+  * c表示controller，是核心，用于处理请求、获取数据、返回结果
+
+
 - [MVT](https://blog.csdn.net/weixin_41790086/article/details/80726480)
+  * Django是一款python的web开发框架
+  * 与MVC有所不同，属于MVT框架
+  * m表示model，负责与数据库交互
+  * v表示view，是核心，负责接收请求、获取数据、返回结果
+  * t表示template，负责呈现内容到浏览器
