update: python 43.md

--- a/python/contents/43.md
+++ b/python/contents/43.md
@@ -41,6 +41,7 @@
 - $`pip install Django==2.1.7` 注：直接用 pip install Django 会安装最新版, 这里使用的是制定版本
 - $`python -m django --version` 查看当前Django版本
 - 注：有时候您或许会使用 pip3 或 python3 也可自行配置
+- 注意在安装Django的时候，还同时安装了它的一个依赖`pytz`
 
 ### 创建项目
 - $`django-admin startproject yourProject` yourProject 是您自定义的项目名称
