add: linux 43.md

--- a/python/contents/43.md
+++ b/python/contents/43.md
@@ -50,9 +50,10 @@
 ### 项目结构
 
 ```
-├── manage.py ·····························  命令实用程序
-├── yourProject/ ··························  项目主文件夹
-└─┬──── __init__.py ·······················  标识yourProject是一个python包
+yourProject/ ······························  根目录只是一个项目的容器。它的名字与Django无关; 您可以将其重命名为您喜欢的任何内容
+├── manage.py ·····························  命令实用程序, 可以让您以各种方式与此Django项目进行交互。
+├── yourProject/ ··························  项目主文件夹, 内部yourProject/目录是您的项目的实际Python包。它的名字是您需要用来导入其中的任何内容的Python包名称（例如yourProject/.urls）
+└─┬──── __init__.py ·······················  一个空的文件, 标识yourProject是一个python包
   ├──── settings.py ·······················  主配置文件
   ├──── urls.py ···························  主路由文件
   └──── wsgi.py ···························  WSGI兼容的Web服务器为您的项目提供服务的入口点
