update: python 44.md

--- a/python/contents/44.md
+++ b/python/contents/44.md
@@ -21,7 +21,7 @@ Run 'python manage.py migrate' to apply them.
 方式二：
 
 - control/command + c 结束服务
-- 在manage.py中注释掉两行如下：
+- 在settings.py中注释掉两行如下：
 	```python
 	DATABASES = {
 	    'default': {
@@ -32,6 +32,7 @@ Run 'python manage.py migrate' to apply them.
 	```
 
 ### Support remote visits
+
 - 更改启动方式 $`python manage.py runserver 0:8000` 注 使用python或python3根据不同平台选择
 
 - 查找自己的ip地址：mac 上通过 ifconfig 查找, windows 上通过 ipconfig 查找
