update: python 77.md

--- a/python/contents/77.md
+++ b/python/contents/77.md
@@ -6,10 +6,10 @@
 
 ### 运行开发服务器
 
-- $`python manage.py runserver` 
+- $`python3 manage.py runserver` 
     * 这样只能本机调试访问
 
-- $`python manage.py runserver 8080`
+- $`python3 manage.py runserver 8080`
     * 该runserver命令在端口8000的内部IP上启动开发服务器。当然也可以指定端口开启服务,如8080端口
 
 - $`python3 manage.py runserver 0:8000`
