update: python 77.md

--- a/python/contents/77.md
+++ b/python/contents/77.md
@@ -16,7 +16,6 @@
     * 这样启动，通过`0`可以进行远程访问, 并且在settigns.py中ALLOWED_HOSTS添加自己的ip地址, 或支持所有 ALLOWED_HOSTS = ['*']
     * runserver只能在本机使用, 是Django自带的http服务
     * 部署时应使用uwsgi
-    * visit http://0.0.0.0:8000/
 
 ### 应用的创建
 
@@ -98,7 +97,7 @@
 - 背后的想法include()是使即插即用的URL变得容易。
 - 注：include()当您包含其他网址格式时，您应始终使用。admin.site.urls是唯一的例外。
 - 验证index视图连接到URLconf中， 运行以下命令：$ `python manage.py runserver 0:8000`
-- 访问：http://localhost：8000/app/ 可见 `Hello World!` 输出
+- 访问：http://0.0.0.0:8000/app/ 可见 `Hello World!` 输出
 
 3 ） **关于url()函数的补充**
 
