update: python 77.md

--- a/python/contents/77.md
+++ b/python/contents/77.md
@@ -244,12 +244,12 @@
 
 - Django框架中有一个非常强大的应用功能--自动管理界面，常被Web平台管理者使用，去管理整个Web平台。
 - 默认情况下，在settings.py配置文件中INSTALLED_APPS包含以下应用程序，这些应用程序都是由Django提供：
-    > django.contrib.admin - 管理网站。你会很快使用它。
-    > django.contrib.auth - 认证系统。
-    > django.contrib.contenttypes - 内容类型的框架。
-    > django.contrib.sessions - 会话框架
-    > django.contrib.messages - 消息框架。
-    > django.contrib.staticfiles - 管理静态文件的框架。 
+    > django.contrib.admin - 管理网站。你会很快使用它。 <br>
+    > django.contrib.auth - 认证系统。<br>
+    > django.contrib.contenttypes - 内容类型的框架。<br>
+    > django.contrib.sessions - 会话框架。<br>
+    > django.contrib.messages - 消息框架。<br>
+    > django.contrib.staticfiles - 管理静态文件的框架。
 
 - 为了后续的开发，默认这些应用程序都是包含在里面的。
 - 使用这些Django自带的应用程序，需要我们在数据库中创建一些数据表对应，然后才能使用它们。为此，请运行以下命令（数据结构迁移）：
