update: python 78.md

--- a/python/contents/78.md
+++ b/python/contents/78.md
@@ -8,10 +8,11 @@
 ### Django处理请求
 
 - 当用户从Django的站点请求页面时，系统遵循以下步骤来执行的Python代码
-- 首先Django确定要使用的根`URLconf`模块，通过`ROOT_URLCONF`来设置，具体在settings.py配置文件中。但是如果传入`HttpRequest`对象具有`urlconf` 属性（由中间件设置），则其值将用于替换`ROOT_URLCONF`设置
+- 首先Django确定要使用的根`URLconf`模块，通过`ROOT_URLCONF`来设置，具体在settings.py配置文件中。
+- 但是如果传入`HttpRequest`对象具有`urlconf` 属性（由中间件设置），则其值将用于替换`ROOT_URLCONF`设置
 - Django加载该Python模块并查找该变量`urlpatterns`, 这应该是一个Python的`django.conf.urls.url()`实例列表
 - Django按顺序运行每个URL模式，并在匹配所请求的URL的第一个URL中停止
-- 一旦正则表达式匹配，Django将导入并调用给定的视图，这是一个简单的Python函数（或基于类的视图）。该视图通过以下参数传递：
+- 一旦正则表达式匹配，Django将导入并调用给定的视图，这是一个简单的Python函数（或基于类的视图）, 该视图通过以下参数传递：
     * 一个实例HttpRequest
     * 如果匹配的正则表达式没有返回任何命名组，那么来自正则表达式的匹配将作为位置参数提供
     * 关键字参数由正则表达式匹配的任何命名组组成，由可选kwargs参数中指定的任何参数覆盖 `django.conf.urls.url()`
@@ -68,7 +69,7 @@ from . import views
 请求/articles/2005/03/调用函数 ，。views.month_archive(request, year='2005', month='03') 而不是 views.month_archive(request, '2005', '03')
 请求/articles/2003/03/03/调用函数 。views.article_detail(request, year='2003', month='03', day='03')
 在实践中，这意味着您的URLconfs稍微更明确，更不容易出现参数命令错误 - 您可以重新排序视图的函数定义中的参数。
-当然，这些好处是以简洁为代价的; 但是命名组语法丑陋而且太冗长。
+当然，这些好处是以简洁为代价的; 但是命名组语法太冗长。
 '''
 
 urlpatterns = [
@@ -127,14 +128,16 @@ urlpatterns = [
 
 4 ） **关于404错误**
 
-- 404的错误页面，在模板目录中创建一个404.html的页面，
-- 在配置文件中 settings.py DEBUG=False
-- 在出现404的情况时，自动寻找404页面。
+- 在开发阶段无需考虑404的错误，但是在生产阶段, 需要特别处理一下
+- 在项目下新建一个tpls模板目录: `tpls`
+- 404的错误页面，在模板目录中创建一个404.html的页面
+- 在配置文件中 settings.py 中 `TEMPLATES` 中的`DIRS`中添加`os.path.join(BASE_DIR, 'tpls')`
+- 在配置文件中 settings.py 中 `DEBUG=False`, 在出现404的情况时，自动配置的404页面
 - 也可以在视图函数中 手动报出404错误，带提醒信息
     ```python
     # 注意 Http404需要在django.http的模块中引入
     # 响应404
-    raise Http404('纳尼a')
+    raise Http404('出错了！')
     ```
 - 在模板中 404.html
     ```html
@@ -177,16 +180,16 @@ urlpatterns = [
     * 视图：使用django.core.urlresolvers.reverse()函数
     * 模板：使用url模板标签
 - 示例：在URLconf中
-```python
-from django.conf.urls import url
-from . import views
+    ```python
+    from django.conf.urls import url
+    from . import views
 
-urlpatterns = [
-    #...
-    url(r'^articles/([0-9]{4})/$', views.year_archive, name='news-year-archive'),
-    #...
-]
-```
+    urlpatterns = [
+        #...
+        url(r'^articles/([0-9]{4})/$', views.year_archive, name='news-year-archive'),
+        #...
+    ]
+    ```
 - 您可以使用以下模板代码获取这些：
     ```python
     <a href="{ %   url 'news-year-archive' 2012   % }">2012 Archive</a>
