update: python 78.md

--- a/python/contents/78.md
+++ b/python/contents/78.md
@@ -61,6 +61,7 @@ urlpatterns = [
 - 在Python正则表达式中，正则表达式命名组的语法是(?P<name>pattern)，其中命名组中的命名就是name，并且 pattern是某些匹配的模式。
 
 1 ） **示例**
+
 ```python
 from django.conf.urls import url
 from . import views
@@ -79,22 +80,23 @@ urlpatterns = [
     url(r'^articles/(?P<year>[0-9]{4})/(?P<month>[0-9]{2})/(?P<day>[0-9]{2})/$', views.article_detail),
 ]
 ```
+
 - 这完成了与上一个例子完全相同的事情，有一个微妙的区别：捕获的值被传递到视图函数作为关键字参数，而不是位置参数
 
 2 ) **URLconf的搜索**
 
 - URLconf将根据所请求的URL进行搜索，作为普通的Python字符串。这不包括GET或POST参数或域名
-    * 在请求中https://www.example.com/myapp/，URLconf将寻找myapp/
-    * 在请求中https://www.example.com/myapp/?page=3，URLconf将会查找myapp/
+    * 在请求中`https://www.example.com/app/`, URLconf将寻找app/
+    * 在请求中`https://www.example.com/app/?page=3`, URLconf将会查找app/
+
 - URLconf不查看请求方法。换句话说，所有的请求方法(GET,POST,HEAD等)都将被路由到相同的URL功能
 
-3 ) 指定用于视图参数的默认值
+3 ) **指定用于视图参数的默认值**
 
 - 一个方便的技巧是为您的视图参数指定默认参数。下面是一个URLconf和view的例子：
-- 在下面的示例中，两个URL模式指向相同的视图views.page- 但是第一个模式不会从URL捕获任何内容
-    * 如果第一个模式匹配，该page()函数将使用它的默认参数num，"1"
-    * 如果第二个模式匹配， page()将使用num正则表达式捕获的任何值
-
+- 在下面的示例中，两个URL模式指向相同的视图views.page, 但是第一个模式不会从URL捕获任何内容
+    * 如果第一个模式匹配，该page() 函数将使用它的默认参数num，"1"
+    * 如果第二个模式匹配，page() 将使用num正则表达式捕获的任何值, 示例：
     ```python
     # URLconf
     from django.conf.urls import url
@@ -118,13 +120,11 @@ urlpatterns = [
 - 有关详细信息，请参阅自定义错误视图的文档。
 - 这样的值可以在你的根URLconf中设置。在任何其他URLconf中设置这些变量将不起作用。
 - 值必须是可调用的，或者代表视图的完整的Python导入路径的字符串，应该被调用来处理手头的错误条件。
-
-变量
-
-- handler400- 见django.conf.urls.handler400。
-- handler403- 见django.conf.urls.handler403。
-- handler404- 见django.conf.urls.handler404。
-- handler500- 见django.conf.urls.handler500。
+- 相关变量说明：
+    * handler400- 见django.conf.urls.handler400
+    * handler403- 见django.conf.urls.handler403
+    * handler404- 见django.conf.urls.handler404
+    * handler500- 见django.conf.urls.handler500
 
 4 ） **关于404错误**
 
@@ -139,7 +139,7 @@ urlpatterns = [
     # 响应404
     raise Http404('出错了！')
     ```
-- 在模板中 404.html
+- 在模板中 404.html, 示例：
     ```html
     <!DOCTYPE html>
     <html>
@@ -149,7 +149,7 @@ urlpatterns = [
     <body>
         <center>
             <h2>404 not found</h2>
-            <h3>{ {   exception   } }</h3>
+            <h3>{{ exception }}</h3>
         </center>
     </body>
     </html>
@@ -177,7 +177,7 @@ urlpatterns = [
 
 - 如果在视图、模板中使用硬编码的链接，在urlconf发生改变时，维护是一件非常麻烦的事情
     * 解决：在做链接时，通过指向urlconf的名称，动态生成链接地址
-    * 视图：使用django.core.urlresolvers.reverse()函数
+    * 视图：使用`django.core.urlresolvers.reverse()`函数
     * 模板：使用url模板标签
 - 示例：在URLconf中
     ```python
