update: dsa 4.md

--- a/dsa/contents/4.md
+++ b/dsa/contents/4.md
@@ -22,22 +22,24 @@
 
 3 ） **简单的实现**
 
-- 转化为点与三条有向直线的相对位置关系
-- 你的面朝向剪头方向, 点在有向直线的左右两半, 是左还是右?
-
 <div align=center>
     <img width='200' src='./screenshot/2.jpg' />
 </div>
 
+- 转化为点与三条有向直线的相对位置关系
+- 你的面朝向剪头方向, 点在有向直线的左右两半, 是左还是右?
+
 ```c++
 // 判断点在线的左侧
-bool ToLeft()
+bool ToLeft() {
     // ... TODO
+}
 
 // 最终实现方案
-bool InTriangle(P, Q, R, S)
+bool InTriangle(P, Q, R, S) {
     l1 = ToLeft(P, Q, S)
     l2 = ToLeft(Q, R, S)
     l3 = ToLeft(R, P, S)
     return l1 == l2 && l2 == l3
+}
 ```
