update: dsa 4.md

--- a/dsa/contents/4.md
+++ b/dsa/contents/4.md
@@ -2,7 +2,7 @@
 
 - 计算几何是算法设计和分析的几何版本，距今也就40多年的时间
 
-# 关于测试点在三角形内的算法(In-Trangle Test)
+### 关于测试点在三角形内的算法(In-Trangle Test)
 
 <div align=center>
     <img width='200' src='./screenshot/1.jpg' />
