--- a/python/contents/79.md
+++ b/python/contents/79.md
@@ -2,7 +2,7 @@
 
 - 模型是你的数据的唯一的、权威的信息源。它包含你所储存数据的必要字段和行为。
 - 通常，每个模型对应数据库中唯一的一张表。
-- 每个模型都是django.db.models.Model的一个Python 子类。
+- 每个模型都是`django.db.models.Model`的一个Python 子类。
 - 模型的每个属性都表示为数据库中的一个字段。
 - Django 提供一套自动生成的用于数据库访问的API；
 - 这极大的减轻了开发人员的工作量，不需要面对因数据库变更而导致的无效劳。
@@ -56,7 +56,7 @@
 
 5 ) **告诉Django在接下来的mysql操作中使用pymysql**
 
-- 打开myweb/__init__.py，写入以下代码导入pymysql：
+- 打开主项目目录下的__init__.py，写入以下代码导入pymysql：
     ```python
     import pymysql
     pymysql.install_as_MySQLdb()
@@ -83,7 +83,7 @@ class Users(models.Model):
 
 2 ) **把应用加入settings.py文件的installed_app项**
 
-- 编辑myweb/settings.py文件，并将项目应用文件名添加到该INSTALLED_APPS设置。
+- 编辑主项目目录下的settings.py文件，并将项目应用文件名添加到该INSTALLED_APPS设置。
     ```python
     INSTALLED_APPS = [
         'django.contrib.admin',
@@ -132,51 +132,51 @@ class Users(models.Model):
 - 字段类型被定义在django.db.models.fields目录下，为了方便使用，被导入到django.db.models中
 - 使用方式
     * 导入`from django.db import models`
-    * 通过models.Field创建字段类型的对象，赋值给属性
+    * 通过`models.Field`创建字段类型的对象，赋值给属性
 - 对于重要数据都做逻辑删除，不做物理删除，实现方法是定义isDelete属性，类型为BooleanField，默认值为False
 
 1 ） **字段类型**
 
-- AutoField：一个根据实际ID自动增长的IntegerField，通常不指定
+- `AutoField`：一个根据实际ID自动增长的IntegerField，通常不指定
     * 如果不指定，一个主键字段将自动添加到模型中
-- BooleanField：true/false 字段，此字段的默认表单控制是CheckboxInput
-- NullBooleanField：支持null、true、false三种值
-- CharField(max_length=字符长度)：字符串，默认的表单样式是 TextInput
-- TextField：大文本字段，一般超过4000使用，默认的表单控件是Textarea
-- IntegerField：整数
-- DecimalField(max_digits=None, decimal_places=None)：使用python的Decimal实例表示的十进制浮点数
-    * DecimalField.max_digits：位数总数
-    * DecimalField.decimal_places：小数点后的数字位数
-- FloatField：用Python的float实例来表示的浮点数
-- DateField[auto_now=False, auto_now_add=False])：使用Python的datetime.date实例表示的日期
-    * 参数DateField.auto_now：每次保存对象时，自动设置该字段为当前时间，用于"最后一次修改"的时间戳，它总是使用当前日期，默认为false
-    * 参数DateField.auto_now_add：当对象第一次被创建时自动设置当前时间，用于创建的时间戳，它总是使用当前日期，默认为false
+- `BooleanField`：true/false 字段，此字段的默认表单控制是CheckboxInput
+- `NullBooleanField`：支持null、true、false三种值
+- `CharField(max_length=字符长度)`：字符串，默认的表单样式是 TextInput
+- `TextField`：大文本字段，一般超过4000使用，默认的表单控件是Textarea
+- `IntegerField`：整数
+- `DecimalField(max_digits=None, decimal_places=None)`：使用python的Decimal实例表示的十进制浮点数
+    * `DecimalField.max_digits`：位数总数
+    * `DecimalField.decimal_places`：小数点后的数字位数
+- `FloatField`：用Python的float实例来表示的浮点数
+- `DateField[auto_now=False, auto_now_add=False])`：使用Python的datetime.date实例表示的日期
+    * 参数`DateField.auto_now`：每次保存对象时，自动设置该字段为当前时间，用于"最后一次修改"的时间戳，它总是使用当前日期，默认为false
+    * 参数`DateField.auto_now_add`：当对象第一次被创建时自动设置当前时间，用于创建的时间戳，它总是使用当前日期，默认为false
     * 该字段默认对应的表单控件是一个TextInput. 在管理员站点添加了一个JavaScript写的日历控件，和一个“Today"的快捷按钮，包含了一个额外的invalid_date错误消息键
-    * auto_now_add, auto_now, and default 这些设置是相互排斥的，他们之间的任何组合将会发生错误的结果
-- TimeField：使用Python的datetime.time实例表示的时间，参数同DateField
-- DateTimeField：使用Python的datetime.datetime实例表示的日期和时间，参数同DateField
-- FileField：一个上传文件的字段
-- ImageField：继承了FileField的所有属性和方法，但对上传的对象进行校验，确保它是个有效的image
+    * `auto_now_add`, `auto_now` 这些设置是相互排斥的，他们之间的任何组合将会发生错误的结果
+- `TimeField`：使用Python的datetime.time实例表示的时间，参数同DateField
+- `DateTimeField`：使用Python的datetime.datetime实例表示的日期和时间，参数同DateField
+- `FileField`：一个上传文件的字段
+- `ImageField`：继承了FileField的所有属性和方法，但对上传的对象进行校验，确保它是个有效的image
 
 2 ） **字段选项**
 
 - 通过字段选项，可以实现对字段的约束
 - 在字段对象时通过关键字参数指定
-- null：如果为True，Django 将空值以NULL 存储到数据库中，默认值是 False
-- blank：如果为True，则该字段允许为空白，默认值是 False
+- `null`：如果为True，Django 将空值以NULL 存储到数据库中，默认值是 False
+- `blank`：如果为True，则该字段允许为空白，默认值是 False
 - 对比：null是数据库范畴的概念，blank是表单验证证范畴的
-- db_column：字段的名称，如果未指定，则使用属性的名称
-- db_index：若值为 True, 则在表中会为此字段创建索引
-- default：默认值
-- primary_key：若为 True, 则该字段会成为模型的主键字段
-- unique：如果为 True, 这个字段在表中必须有唯一值
+- `db_column`：字段的名称，如果未指定，则使用属性的名称
+- `db_index`：若值为 True, 则在表中会为此字段创建索引
+- `default`：默认值
+- `primary_key`：若为 True, 则该字段会成为模型的主键字段
+- `unique`：如果为 True, 这个字段在表中必须有唯一值
 
 3 ) **关系**
 
 - 关系的类型包括
-    * ForeignKey：一对多，将字段定义在多端中
-    * ManyToManyField：多对多，将字段定义在两端中
-    * OneToOneField：一对一，将字段定义在任意一端中
+    * `ForeignKey`：一对多，将字段定义在多端中
+    * `ManyToManyField`：多对多，将字段定义在两端中
+    * `OneToOneField`：一对一，将字段定义在任意一端中
 - 可以维护递归的关联关系，使用'self'指定，详见“自关联”
 - 用一访问多：对象.模型类小写_set
     * `bookinfo.heroinfo_set`
@@ -188,9 +188,9 @@ class Users(models.Model):
 ### 元选项
 
 - 在模型类中定义类Meta，用于设置元信息
-- 元信息db_table：定义数据表名称，推荐使用小写字母，
+- 元信息db_table：定义数据表名称，推荐使用小写字母
 - 数据表的默认名称:<app_name>_<model_name>
-- 例如myweb_users
+- 例如: `djangoApp_users`
 - ordering：对象的默认排序字段，获取对象的列表时使用，接收属性构成的列表
     ```python
     class BookInfo(models.Model):
@@ -271,7 +271,7 @@ class Users(models.Model):
 
 1 ） **类的属性**
 
-- objects：是Manager类型的对象，用于与数据库进行交互
+- `objects`：是Manager类型的对象，用于与数据库进行交互
 - 当定义模型类时没有指定管理器，则Django会为模型类提供一个名为objects的管理器
 - 支持明确指定模型类的管理器
     ```python
@@ -284,22 +284,19 @@ class Users(models.Model):
 2 ) **创建对象**
 
 - 当创建对象时，django不会对数据库进行读写操作
-- 调用save()方法才与数据库交互，将对象保存到数据库中
+- 调用`save()`方法才与数据库交互，将对象保存到数据库中
 - 使用关键字参数构造模型对象很麻烦，推荐使用下面的两种之式
-- 说明：init方法已经在基类models.Model中使用，在自定义模型中无法使用
+- 说明：init方法已经在基类`models.Model`中使用，在自定义模型中无法使用
 
 3 ) **实例的属性**
 
-- DoesNotExist：在进行单个查询时，模型的对象不存在时会引发此异常，结合try/except使用
+- `DoesNotExist`：在进行单个查询时，模型的对象不存在时会引发此异常，结合try/except使用
 
 4 ) **实例的方法**
 
-__str__(self)：重写object方法，此方法在将对象转换成字符串时会被调用
-
-save()：将模型对象保存到数据表中
-
-delete()：将模型对象从数据表中删除
-
+- `__str__(self)`：重写object方法，此方法在将对象转换成字符串时会被调用
+- `save()`：将模型对象保存到数据表中
+- `delete()`：将模型对象从数据表中删除
 
 ### 模型查询
 
@@ -330,13 +327,13 @@ delete()：将模型对象从数据表中删除
     filter(键1=值1).filter(键2=值2)
     ```
 - 返回单个值的方法
-    * get()：返回单个满足条件的对象
+    * `get()`：返回单个满足条件的对象
         * 如果未找到会引发"模型类.DoesNotExist"异常
         * 如果多条被返回，会引发"模型类.MultipleObjectsReturned"异常
-    - count()：返回当前查询的总条数
-    - first()：返回第一个对象
-    - last()：返回最后一个对象
-    - exists()：判断查询集中是否有数据，如果有则返回True
+    - `count()`：返回当前查询的总条数
+    - `first()`：返回第一个对象
+    - `last()`：返回最后一个对象
+    - `exists()`：判断查询集中是否有数据，如果有则返回True
 
 **限制查询集**
 
@@ -378,21 +375,21 @@ delete()：将模型对象从数据表中删除
 
 **比较运算符**
 
-- exact：表示判等，大小写敏感；如果没有写“ 比较运算符”，表示判等
+- `exact`：表示判等，大小写敏感；如果没有写“ 比较运算符”，表示判等
     * `filter(isDelete=False)`
-- contains：是否包含，大小写敏感
+- `contains`：是否包含，大小写敏感
     * `exclude(btitle__contains='www')`
-- startswith、endswith：以value开头或结尾，大小写敏感
+- `startswith`、`endswith`：以value开头或结尾，大小写敏感
     * `exclude(btitle__endswith='com')`
-- isnull、isnotnull：是否为null
+- `isnull`、`isnotnull`：是否为null
     * `filter(btitle__isnull=False)`
 
-- 在前面加个i表示不区分大小写，如iexact、icontains、istarswith、iendswith
-- in：是否包含在范围内
+- 在前面加个i表示不区分大小写，如`iexact`、`icontains`、`istarswith`、`iendswith`
+- `in`：是否包含在范围内
     * `filter(pk__in=[1, 2, 3, 4, 5])`
-- gt、gte、lt、lte：大于、大于等于、小于、小于等于
+- `gt`、`gte`、`lt`、`lte`：大于、大于等于、小于、小于等于
     * `filter(id__gt=3)`
-- year、month、day、week_day、hour、minute、second：对日期间类型的属性进行运算
+- `year`、`month`、`day`、`week_day`、`hour`、`minute`、`second`：对日期间类型的属性进行运算
     * `filter(bpub_date__year=1980)`
     * `filter(bpub_date__gt=date(1980, 12, 31))`
 
@@ -405,13 +402,13 @@ delete()：将模型对象从数据表中删除
 
 **聚合函数**
 
-- 使用aggregate()函数返回聚合函数的值
-- 函数：Avg，Count，Max，Min，Sum
+- 使用`aggregate()`函数返回聚合函数的值
+- 函数：`Avg`，`Count`，`Max`，`Min`，`Sum`
     ```python
     from django.db.models import Max
     maxDate = list.aggregate(Max('bpub_date'))
     ```
-- count的一般用法
+- `count`的一般用法
     * `count = list.count()`
 
 ---
