update: python 79.md

--- a/python/contents/79.md
+++ b/python/contents/79.md
@@ -103,9 +103,9 @@ class Users(models.Model):
         Did you install mysqlclient or MySQL-python?
         # 安装上面"配置Mysql数据库"的第五步配置，或安装：pip install mysqlclient后就可以了
         ```
-    * 若执行python manage.py makemigrations命令(可能把migrations文件夹给删了)，会提示"No changes detected." 可能有用的解决方式如下：
-        * 先 python manage.py makemigrations --empty yourappname 生成一个空的initial.py
-        * 再 python manage.py makemigrations 生成原先的model对应的migration file
+    * 若执行 $`python3 manage.py makemigrations`命令(可能把migrations文件夹给删了)，会提示"No changes detected." 可能有用的解决方式如下：
+        * 先 $`python3 manage.py makemigrations --empty yourappname` 生成一个空的initial.py
+        * 再 $`python3 manage.py makemigrations` 生成原先的model对应的migration file
 
 - 执行迁移
     * $ `python3 manage.py migrate`
@@ -129,7 +129,7 @@ class Users(models.Model):
 ### 定义属性
 
 - 定义属性时，需要字段类型
-- 字段类型被定义在django.db.models.fields目录下，为了方便使用，被导入到django.db.models中
+- 字段类型被定义在`django.db.models.fields`目录下，为了方便使用，被导入到`django.db.models`中
 - 使用方式
     * 导入`from django.db import models`
     * 通过`models.Field`创建字段类型的对象，赋值给属性
@@ -187,11 +187,11 @@ class Users(models.Model):
 
 ### 元选项
 
-- 在模型类中定义类Meta，用于设置元信息
-- 元信息db_table：定义数据表名称，推荐使用小写字母
+- 在模型类中定义类`Meta`，用于设置元信息
+- 元信息`db_table`：定义数据表名称，推荐使用小写字母
 - 数据表的默认名称:<app_name>_<model_name>
 - 例如: `djangoApp_users`
-- ordering：对象的默认排序字段，获取对象的列表时使用，接收属性构成的列表
+- `ordering`：对象的默认排序字段，获取对象的列表时使用，接收属性构成的列表
     ```python
     class BookInfo(models.Model):
         ...
