update: python 79.md

--- a/python/contents/79.md
+++ b/python/contents/79.md
@@ -5,7 +5,7 @@
 - 每个模型都是`django.db.models.Model`的一个Python 子类。
 - 模型的每个属性都表示为数据库中的一个字段。
 - Django 提供一套自动生成的用于数据库访问的API；
-- 这极大的减轻了开发人员的工作量，不需要面对因数据库变更而导致的无效劳。
+- 这极大的减轻了开发人员的工作量，不需要面对因数据库变更而导致的无效劳动。
 - 备注：本文基于django版本1.11展开, 技术栈会有所升级, 仅供参考！
 
 ### 模型与数据库的关系
