update: python 79.md

--- a/python/contents/79.md
+++ b/python/contents/79.md
@@ -133,7 +133,7 @@ class Users(models.Model):
 - 使用方式
     * 导入`from django.db import models`
     * 通过`models.Field`创建字段类型的对象，赋值给属性
-- 对于重要数据都做逻辑删除，不做物理删除，实现方法是定义isDelete属性，类型为BooleanField，默认值为False
+- 对于重要数据都做逻辑删除，不做物理删除，实现方法是定义`isDelete`属性，类型为`BooleanField`，默认值为False
 
 1 ） **字段类型**
 
