update: python 78.md

--- a/python/contents/78.md
+++ b/python/contents/78.md
@@ -4,6 +4,7 @@
 - Django可以让你自己设计URL，无论你想要什么，没有框架限制。
 - 要为应用程序设计URL，您可以非正式地创建一个名为**URLconf**（URL配置）的Python模块。
 - 这个模块是纯Python代码，是一个简单的Python模式（简单的正则表达式）到Python函数（您的视图）之间的映射。
+- 备注：此文是基于Django1.11版本展开, 技术栈会有所升级，仅作参考！
 
 ### Django处理请求
 
